# stackql

./: .gitignore  .golangci.yml  AGENTS.md  CLAUDE.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  cover.out  docker-compose-credentials.yml  docker-compose-dependencies-dev.yml  docker-compose-dev.yml  docker-compose-externals.yml  docker-compose-live.yml  docker-compose-persist-postgres.yml  docker-compose-testing.yml  docker-compose.audit.yaml  docker-compose.yml  glama.json  go.mod  go.sum  listings.md  release.yaml  requirements.txt  server.json  testLib.Dockerfile  version.txt
packaging/mcpb/pypi/: pyproject.toml
test/: README.md  poetry.toml  pyproject.toml
test/assets/input/: empty-templated-show-services-extended-filtered.iql  insert-compute-network.iql  insert-dependent-bq-datasets.iql  insert-dependent-compute-disk-reversed.iql  insert-dependent-compute-disk.iql  json-templated-show-services-extended-filtered.iql  jsonnet-templated-show-services-extended-filtered.iql  manual_cert.pem  select-exec-dependent-org-iam-policy.iql  show-services-ctx.json  show-services-ctx.jsonnet  templated-insert-compute-network.iql
test/assets/secrets/: .gitignore
test/db/: .gitignore  cache_setup.sql  google._root_.json  google.bigquery.json  google.cloudresourcemanager.json  google.container.json  setup.sql
test/db/postgres/: cache_setup.sql  setup.sql
test/db/sqlite/: cache_setup.sql  setup.sql
test/deprecated/python/: main.py
test/dummyserver/: dummy_server.py
test/functional/: .gitignore  README.md  stackql_from_cmd_line.robot  stackql_mocked_from_cmd_line.robot
test/functional/variables/: stackql_context.py
test/inputs/: describe-google-compute.iql  show-providers.iql
test/mockserver/: README.md
test/mockserver/expectations/: staging.json  static-auth-testing-expectations.json  static-aws-expectations.json  static-azure-expectations.json  static-digitalocean-expectations.json  static-gcp-expectations.json  static-github-expectations.json  (+5 more)
test/python/: main.py  oauth2_token.py  registry-rewrite.py  tcp_lb.py
test/registry-sandbox/: .gitignore
test/robot/: .gitignore  README.md
test/schema/: VpnTunnelAggregatedList.json  compute_instances.json
test/server/: README.md
(+2179 files in other folders)
